Started implementation of edit activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorPrimaryDark">#088008</color>
     <color name="colorAccent">#1bb41b</color>
     <color name="colorBackground">#f1fdf1</color>
+    <color name="calendarBar">#eaeaea</color>
 </resources>
